# LiveStream_Clips_System

./: .env.example  .gitignore  Livestream_Clip_System_Handoff.md  README.md  guide.md  package-lock.json  package.json  tsconfig.base.json
apps/dashboard/: package.json
gpu-worker/: README.md  pyproject.toml  regen_captions.py  requirements.txt
gpu-worker/clipfactory_gpu/: __init__.py  claude_auth.py  claude_copy.py  config.py  d1_api.py  deepgram.py  ffmpeg_recipes.py  gemini.py  hook_generator.py  hook_renderer.py  hook_scorer.py  main.py  pipeline.py  prompts_fallback.py  queue_pull.py  r2_client.py  substance_scorer.py
migrations/: 0001_initial.sql  0002_seed_prompts.sql  0003_dashboard_users.sql  0004_worker_heartbeats.sql  0005_clip_edit_url.sql  0006_substance_hook_scoring.sql  0007_seed_prompts_v1_1.sql  0008_metricool_brands.sql  0008_seed_prompts_v1_2.sql  0009_clip_dispatch.sql  0010_clip_auto_retry.sql  0011_metricool_brands_user.sql  0012_prompts_tagged.sql  0013_clip_content_tag.sql  0014_stream_sessions.sql  0015_seed_vlog_prompts.sql  0016_update_prompts_v2.sql
prompts/gameplay/: Clip_Substance_Scorer_Prompt_v1.2.md  Hook_Overlay_Generator_Prompt_v1.1.md  Hook_Overlay_Scorer_Prompt_v1.0.md  Per_Platform_Post_Text_Generator_Prompt_v1.1.md
prompts/vlog/: Clip_Substance_Scorer_Prompt_v1.0.md  Hook_Overlay_Generator_Prompt_v1.0.md  Hook_Overlay_Scorer_Prompt_v1.0.md  Per_Platform_Post_Text_Generator_Prompt_v1.0.md
scripts/: gen_prompt_migration.py  probe_logo_box.py  probe_overlay_positions.py  strip_logo_green.py
(+4 files in other folders)
