[project]
name = "clipfactory-gpu"
version = "0.1.0"
description = "ClipFactory GPU pipeline worker: Gemini + Deepgram + FFmpeg(NVENC) + Claude copy."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "boto3>=1.35",
  "python-dotenv>=1.0",
  "google-genai>=0.8",
  "anthropic>=0.39",
  "tenacity>=9.0",
  "pydantic>=2.9",
  "Pillow>=10.0",
]

[project.scripts]
clipfactory-gpu = "clipfactory_gpu.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipfactory_gpu"]
